# medtech-traceable-mlops

./: README.md  dvc.yaml  pyproject.toml
data/cleaned/: .gitignore
gx/: great_expectations.yml
gx/checkpoints/: raw_data_checkpoint.json
gx/expectations/: .ge_store_backend_id  default.json  raw_data_suite.json
gx/validation_definitions/: raw_data_val_def.json
notebooks/: data_exploration.ipynb
src/: 01_validate_raw.py  02_clean_raw.py  02_preprocess.py  03_validate_cleaned.py  data_contract.py
src/config/: data_contract.py  logging_config.py
src/utils/: get_dvc_hash.py
