[project]
name = "medtech-traceable-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "great-expectations>=1.14.0",
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
    "prefect>=3.6.21",
    "scikit-learn>=1.8.0",
]
